# NoteThat

./: CHANGELOG.MD  CHANGELOG.md  CMakeLists.txt  README.md
src/: DocumentManager.hpp  EditorView.hpp  FileValidator.hpp  Window.hpp  main.cpp
